@@ -7,29 +7,36 @@ straightforward and won't be explained in this document.
 
 If you have a recent version of Webmin (>0.80 will do) you can use the 
 Webmin Modules tool in the Webmin Configuration module to install 
-directly from the tarball.  If you want to do it manually, you can use
+directly from the .wbm package.
+If you installed webmin from an .rpm or .deb package, you probably want
+to do this with the Webmin LTSP module too.
+If you want to do it manually, you can use
 the following instructions:
 
 1. Download the ltsp-0.x.tar.gz package from
    http://termserv.berlios.de/ltsp-module/
 
-2. Unpack the package in your webmin module directory, e.g.
+2. Unpack the package in a temporary directory, say /tmp:
+   cd /tmp; tar -xzvf <package>
+   
+3. Copy the directory <tmpdir>/ltsp to your webmin module directory, e.g.
    /usr/share/webmin on Debian or
    /usr/libexec/webmin on Caldera:
 
-   cd <webmin-module-directory>; tar -xzvf <package>
+   cp /tmp/<package-name>/ltsp <webmin-module-directory>
 
-2. Create /etc/webmin/ltsp, mode 711, owner root:root
+4. Create the directory /etc/webmin/ltsp, mode 711, owner root:root
 
-3. Create an empty file /etc/webmin/ltsp/admin.acl, mode 600, owner root:root
+5. Create an empty file /etc/webmin/ltsp/admin.acl, mode 600, owner root:root
 
-4. Copy /usr/share/webmin/ltsp/config-<your-distribution>-linux 
+6. Copy /usr/share/webmin/ltsp/config-<your-distribution>-linux 
    (respectively /usr/libexec/webmin/config-<your-distribution>-linux) to
-   /etc/webmin/ltsp/config, mode 600, owner root:root
+   /etc/webmin/ltsp/config, mode 600, owner root:root. If necessary,
+   adjust the settings in the config file.
 
-5. Add ltsp in /etc/webmin/webmin.acl
+7. Add ltsp in /etc/webmin/webmin.acl
 
-6. Restart the webmin daemon, e.g.
+8. Restart the webmin daemon, e.g.
    /etc/rc.d/init.d/webmin restart on Caldera and most Linuxes,
    /sbin/init.d/webmin restart on older SuSE systems or
    /etc/init.d/webmin restart on Debian and newer SuSE systems
