@@ -126,5 +126,5 @@ binary-arch: build install
 #	dh_md5sums
 #	dh_builddeb
 
-binary: binary-indep binary-arch
+binary: binary-indep
 .PHONY: build clean binary-indep binary-arch binary install configure
