@@ -21,7 +21,10 @@ $EXPERIMENTAL = 1;
   "2.08"     => 2080,
   "2.09pre1" => 2081,
   "2.09pre2" => 2082,
-  "2.09"     => 2090
+  "2.09pre3" => 2083,
+  "2.09pre4" => 2084,
+  "2.09"     => 2090,
+  "3.00"     => 3000
 );
 
 return TRUE;
